styles/about.css
html {
  background: var(--clr-base);
}

main {
  --border-dist: min(2vh, 2vw);
  width: calc(100% - 2 * var(--border-dist));
  margin: var(--border-dist);
  padding: 2rem;
  border: 1px solid var(--clr-primary);
  background: linear-gradient(
    160deg,
    var(--clr-base),
    color-mix(in srgb, var(--clr-base) 60%, var(--clr-secondary)),
    color-mix(in srgb, var(--clr-base) 94%, var(--clr-primary))
  );
}

nav {
  position: fixed;
  top: 0%;
  left: 20%;
  height: 6%;
  width: 60%;
  border: 2px solid var(--clr-base);
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  display: flex;
  align-items: center;
  background: var(--clr-secondary);
}

.nav-links {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.nav-link a {
  padding-inline: 0.5rem;
  color: var(--clr-primary);
  text-decoration: none;
  font-size: 1.2rem;
  font-weight: bold;
}

@media only screen and (max-width: 900px) {
  nav {
    width: 30%;
    min-width: fit-content;
    left: 35%;
  }

  .nav-links {
    justify-content: center;
  }

  .nav-link a {
    height: 0;
    width: 0;
    padding: 0;
    font-size: 0rem;
  }

  #home-link a {
    padding-inline: 0.5rem;
    font-size: 1.2rem;
  }
}

.nav-link a:hover {
  text-decoration: underline;
}

h2 {
  padding-top: 3rem;
  color: color-mix(in srgb, var(--clr-primary) 80%, var(--clr-secondary));
  text-align: center;
  text-decoration: underline
    color-mix(in srgb, var(--clr-primary) 70%, var(--clr-secondary)) 2px;
  font-size: clamp(3rem, 6vw + 0.5rem, 3.5rem);
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

section p {
  max-width: 1000px;
  margin-top: 1.5rem;
  font-size: clamp(1rem, 1vw + 0.5rem, 1.15rem);
  color: color-mix(in srgb, var(--clr-primary) 80%, var(--clr-secondary));
}

section b {
  color: color-mix(in srgb, var(--clr-primary) 80%, var(--clr-secondary));
}

#about {
  padding-top: 3.5rem;
}

#sources {
  padding-bottom: 3rem;
}

#sources a {
  color: var(--clr-primary);
  text-decoration: underline;
}

